# FastAPI_HM-

./: README.md
homework/: pyproject.toml
homework/homework/: __init__.py
