[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Yar00myr <ivanucaromir@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}

[tool.poetry.scripts]
start = "homework:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
